2010-03-24  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-register-process): store timeline
	spec string.
	(twittering-get-and-render-timeline): register a process together
	with timeline spec string.
	(twittering-release-process): use `delq' instead of `delete'.
	(twittering-get-timeline-spec-string-from-process): new function
	for registered timeline spec string.

2010-03-23  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-mode-map): bind "SPC" and "C-v" to
	`twittering-scroll-up', and bind "<backspace>" and "M-v" to
	`twittering-scroll-down'.
	(twittering-scroll-up): new function. Thanks to Jim Crossley.
	(twittering-scroll-down): new function.

2010-03-19  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-remove-inactive-processes): add
	`exit' and `signal' to `inactive-statuses'.

2010-03-18  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-other-user-list-interactive): 
	Revert part of 2010-03-12 change to prevent an overwrite of a
	message which is outputted by `twittering-read-list-name'.

	* twittering-mode.el (twittering-http-default-sentinel): Check
	process-status before processing sentinel.

2010-03-17  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-generate-status-formater-base):
	fix the formater for "%FACE[...]{...}".

2010-03-13  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-make-display-spec-for-icon): Use
	`create-animated-image' if present (on Emacs24 or later).

2010-03-12  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-http-get-default-sentinel):
	Revert part of 2010-03-06 change because the scheduled removing of
	public_timeline from twitter API had been canceled on 2010-03-11.

	* twittering-mode.el (twittering-other-user-list-interactive): Fix
	condition to detect a null string.
	(twittering-other-user-timeline-interactive): Likewise.